@@ -1,6 +1,10 @@
 LITT Changelog:
 ===============
 
+ * 2019-09-03: Improvements in author/genre virtual columns.
+               * Takes books with stories into account so authors don't get genres counted for
+                 other authors genres. Affected agc, agcp and gac.
+               * Added agg and aggp for listing all genres (and with pseudonyms) for an author.
  * 2019-09-02: Now checks the ISBN when adding books. Has the option to accept invalid ones.
  * 2019-09-02: Generalized the br* listings, can now count authors, genres, stories, sources 
                and categories as well. This was done by extending the --cnt option values.
